--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-numpy==1.19.2
-streamlit==0.79.0
-pandas==1.2.2
-epw==0.0.0
-plotly==4.14.3
-matplotlib==3.3.4
+matplotlib
+pandas
+plotly
+ladybug_core
+ladybug_pandas
+numpy
+streamlit
+ladybug
