--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -4,7 +4,7 @@
 #P2S Cx Light Blue: 009CCD, rgb(0, 156, 205)
 #P2S Cm Orange: FB9A2D, rgb(251, 154, 45)
 #Black: 000000, rgb(0, 0, 0)
-primaryColor="00C496"
+primaryColor="#00C496"
 backgroundColor="#FFFFFF"
 secondaryBackgroundColor="#F0F2F6"
 textColor="#000000"
